Fixed bug #74428 (exif_read_data(): "Illegal IFD size" warning occurs with correct exif format)